# pysometric

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: .gitignore
examples/example01/: sketch_example01.py
examples/example02/: sketch_example02.py
examples/example03/: sketch_example03.py
examples/example04/: sketch_example04.py
pysometric/: __init__.py  axis.py  fill.py  render.py  scene.py  shape.py  texture.py  vector.py  volume.py
pysometric/tests/: matrix_test.py  render_test.py  scene_test.py  shape_test.py
